# BRE-Backend

./: .env  Cargo.toml  README.md  log4rs.yaml
entity/: Cargo.toml  cargo.toml
entity/src/: g_appusers.rs  g_audittrail.rs  g_configure.rs  g_releases.rs  g_rules.rs  g_workspaces.rs  lib.rs  prelude.rs  roles.rs  rules.rs  tenants.rs  users.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_g_appusers_table.rs  m20220101_000001_create_g_audittrail_table.rs  m20220101_000001_create_g_releases_table.rs  m20220101_000001_create_g_rules_table.rs  m20220101_000001_create_table.rs  m20220101_000001_create_tenant_table.rs  m20220101_000001_create_tenants_table.rs  m20220101_000001_create_user_table.rs  m20220101_000001_create_users_table.rs  m20220101_000002_create_g_workspaces_table.rs  m20220101_000003_create_g_configure_table.rs
src/: connection.rs  error.rs  main.rs  routes.rs  util.rs  x.rs
src/apiroutes/: audittrail_route.rs  configure_route.rs  release_route.rs  rule_route.rs  user_route.rs  workspace_route.rs
src/auth/: auth.rs
src/controllers/: audittrail_handler.rs  configure_handler.rs  jdm_graph.json  login_handler.rs  release_handler.rs  rule_handler.rs  tenant_handler.rs  user_handler.rs  workspace_handler.rs  zen_handler.rs
src/datafeeding/: data_entry.rs
src/models/: login_model.rs  release_model.rs  rules_model.rs  tenant_model.rs  workspace_model.rs
