[package]
name = "zen-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"] 

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
chrono = "0.4"
thiserror = "1.0"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
