[package]
name = "zen-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"] 

[dependencies]
log = "0.4"
log4rs = "1.2"
migration = { path = "migration" }
entity = { path = "entity" }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
chrono = "0.4"
thiserror = "1.0"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha2 = "0.10.8"
zen-engine = "0.33.0"
